# magpie

./: LICENSE  MANIFEST.in  README.md  setup.cfg
