[metadata]
name = magpie
version = 0.0.1
url = https://github.com/subecho/magpie
author = Dustin Schoenbrun
author_email = "Dustin Schoenbrun" <dustin@subecho.org>
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
exclude =
    test*

